# autoadmin-APP

./: .gitignore  CHAT_INTERFACE_IMPLEMENTATION.md  DELEGATION_SYSTEM.md  FIREBASE_MIGRATION_PLAN.md  FIREBASE_MIGRATION_SUMMARY.md  MIGRATION_SUMMARY.md  PNPM_MIGRATION_COMPLETE.md  PNPM_MIGRATION_PLAN.md  README.md  complete-test-report.json  firebase.json  firestore.indexes.json  firestore.rules  mock_backend.py  prd.md  simple_backend.py
.github/workflows/: backend-agent.yml
backend/: .dockerignore  .env.example  Dockerfile  __init__.py  advanced_backend.py  async_context_manager.py  demo_error_handling.py  docker-compose.yml  firebase_auth_diagnostic.py  firebase_auth_test_results.json  maestro_e2e_test_report_20251205_130700.json  main.py  multi_agent_config.yaml  production_backend.py  pyproject.toml  run_validator.py  setup_monitoring.py  simple_backend.py  simple_validation.py  start_multi_agent_system.py  test_hubspot_curl.sh  test_hubspot_data_sync.py  test_hubspot_integration.py  test_hubspot_simple.py  validate_http_communication.py
backend/.github/workflows/: agents.yml
backend/agents/: README.md  __init__.py  async_agent_base.py  base_agent.py  enhanced_base_agent.py  enhanced_ceo_agent.py  enhanced_devops_agent.py  enhanced_orchestrator.py  enhanced_strategy_agent.py  main.py  marketing_agent.py
backend/agents/deep_agents/: __init__.py  base.py  ceo_agent.py  devops_agent.py  strategy_agent.py
backend/agents/memory/: __init__.py  graph_memory.py  virtual_filesystem.py
backend/agents/swarm/: __init__.py  ceo_agent.py  devops_agent.py  failover_manager.py  health_monitor.py  load_balancer.py  orchestrator.py  strategy_agent.py
backend/agents/tools/: __init__.py  github_tools.py  tavily_tools.py
backend/communication/: __init__.py  github_integration.py  webhook_handler.py
backend/config/: llm_config.py
backend/database/: __init__.py  manager.py  models.py  postgres.py  redis.py
backend/fastapi/: .env.example  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
backend/fastapi/app/: main.py
backend/fastapi/app/core/: config.py  logging.py  streaming_config.py
backend/fastapi/app/middleware/: error_examples.py  error_handler.py  rate_limit.py  sse_middleware.py  streaming_middleware.py
backend/fastapi/app/models/: __init__.py  agent.py  ai.py  common.py  file.py  memory.py  project_spaces.py  task.py  webhook.py  wip_limits.py
backend/fastapi/app/responses/: sse.py
backend/fastapi/app/routers/: __init__.py  agents.py  ai.py  ai_execution.py  atomic_tasking.py  git_integration.py  github.py  health.py  http_polling.py  hubspot.py  monitoring.py  multi_agent.py  notifications.py  project_spaces.py  streaming.py  timeboxing_momentum.py  webhooks.py  wip_limits.py
backend/fastapi/app/routes/: business_intelligence.py
backend/fastapi/app/services/: http_streaming.py  long_polling.py  sse_client_manager.py  sse_event_manager.py
backend/monitoring/: __init__.py  alerting.py  dashboard.py  endpoints.py  error_tracking.py  health.py  integration.py  logger.py  metrics.py  sse_monitoring.py
backend/services/: agent_orchestrator.py  agent_orchestrator_http.py  ai_execution_engine.py  atomic_tasking.py  firebase_recovery.py  firebase_service.py  git_integration.py  github_client.py  github_service.py  http_polling.py  hubspot_service.py  momentum_system.py  project_spaces.py  sse_integration.py  timeboxing.py  wip_limit_enforcement.py
backend/services/business_intelligence/: __init__.py  alert_system.py  api_endpoints.py  competitive_intelligence.py  crm_intelligence.py  example_integration.py  integration_config.py  kpi_calculator.py  morning_briefing.py  revenue_intelligence.py  strategic_planner.py  streaming_integration.py  streaming_router.py  task_delegator.py
backend/tests/: __init__.py  conftest.py
backend/tests/integration/: test_agent_integration.py
backend/tests/unit/: test_agents.py  test_graph_memory.py  test_main.py  test_virtual_filesystem.py
backend/tools/: competitor_analysis.py  market_data.py  social_media.py  web_search.py
backend/utils/: firebase_validator.py  github_validator.py
frontend/: .env.example  .pnpmrc  FIREBASE_FIX_SUMMARY.md  FRONTEND_API_MIGRATION_SUMMARY.md  REFACTORING_SUMMARY.md  TASK_MANAGER_IMPLEMENTATION.md  app.json  babel.config.js  debug_connectivity.js  eslint.config.js  jest.config.js  jest.setup.js  netlify.toml  package.json  pnpm-lock.yaml  test-orchestrator-fix.ts  test-vector-migration.js  tsconfig.json
frontend/.maestro/: README.md  config.yaml  pm-system-test-runner.yaml  test-runner.yaml
frontend/.maestro/agent-orchestration/: agent_interaction_flow.yaml
frontend/.maestro/agents/: agent_interaction_flow.yaml  multi_agent_orchestration_flow.yaml
frontend/.maestro/authentication/: app_launch_flow.yaml
frontend/.maestro/business-intelligence/: dashboard_flow.yaml
frontend/.maestro/dashboard/: dashboard_initialization_flow.yaml  dashboard_interactions_flow.yaml
frontend/.maestro/error-handling/: edge_cases_flow.yaml  reconnection_flow.yaml
frontend/.maestro/http-communication/: http_streaming_flow.yaml  sse_fallback_flow.yaml
frontend/.maestro/http-streaming/: sse_connection_flow.yaml
frontend/.maestro/utils/: helpers.yaml  setup_http_server.js
frontend/app/: _layout.tsx
frontend/app/(tabs)/: _layout.tsx  chat.tsx  explore.tsx  focus-dashboard.tsx  index.tsx  project-spaces.tsx
frontend/components/: BackendStatus.tsx  ErrorBoundary.tsx  LazyLoader.tsx  PerformanceIndicator.tsx  StyleXDemo.tsx  StyleXThemeProvider.tsx  themed-text.stylex.tsx  themed-text.tsx  themed-view.stylex.tsx
frontend/components/business-intelligence/: AlertCenter.tsx  CRMIntelligence.tsx  (+7 more)
frontend/constants/: theme.ts
frontend/e2e/: cypress.config.ts  playwright.config.ts
frontend/hooks/: useAutoAdminAgents.ts  useAutoAdminDashboard.ts  useFirebaseAuth.ts  useKeyboardShortcuts.ts  useLangGraphAgent.ts  useTaskManager.ts
frontend/scripts/: run-tests.sh
frontend/stylex/: base.stylex.ts  variables.stylex.ts
frontend/utils/: fonts.ts  performance.tsx
(+117 files in other folders)
